--- a/BodegaMovil/AppShell.xaml
+++ b/BodegaMovil/AppShell.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:BodegaMovil"
+    xmlns:mvvm="clr-namespace:BodegaMovil.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="BodegaMovil">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate mvvm:LoginPage}"
+        Route="LoginPage" />
 
 </Shell>
